[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-graphql-jwt"
description = "JSON Web Token for Django GraphQL."
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
dynamic = ["version"]
authors = [
  { name = "Dani", email = "dani@domake.io" }
]
keywords = ["django", "graphql", "jwt"]

classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "Django >=2.0",
    "graphene >=2.1.5",
    "graphene-django >=2.0.0",
    "PyJWT >=2,<3",
]

[project.urls]
homepage = "https://github.com/flavors/django-graphql-jwt"
repository = "https://github.com/flavors/django-graphql-jwt"
documentation = "https://django-graphql-jwt.domake.io"
changelog = "https://django-graphql-jwt.domake.io/changelog"

[project.optional-dependencies]
test = [
    "black",
    "codecov",
    "cryptography",
    "flake8",
    "isort",
    "pytest",
    "pytest-cov",
    "pytest-django",
]

doc = [
    "sphinx",
]

[tool.hatch.build.targets.sdist]
include = ["graphql_jwt"]

[tool.hatch.build.targets.wheel]
packages = ["graphql_jwt"]

[tool.hatch.version]
path = "graphql_jwt/__init__.py"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.black]
extend-exclude = '''
/(
  | .htmlcov
  | dist
)/
'''

[tool.isort]
profile = "black"
skip = "migrations"
default_section = "THIRDPARTY"
known_django = "django"
known_first_party = "graphql_jwt"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
